# mbti-random-forest

./: .gitignore  Cargo.toml  README.md  mbti_rf.model  mbti_rf__ALL.model  mbti_rf__ALL_split_80_20.model  mbti_rf__IE.model  mbti_rf__JP.model  mbti_rf__NS.model  mbti_rf__TF.model  mbti_svm__IE.model  mbti_svm__JP.model  mbti_svm__NS.model  mbti_svm__TF.model  output.txt  test.txt
src/: main.rs
src/csv_loader/: mod.rs
src/ensemble/: mod.rs
src/model/: mod.rs
src/myers_briggs/: mod.rs
src/normalize/: mod.rs
src/report/: mod.rs
src/visualize/: mod.rs
svm-test/: mbti_svm__IE.model  mbti_svm__JP.model
trial_1_models/: mbti_rf__ALL.model  mbti_rf__IE.model  mbti_rf__JP.model  mbti_rf__NS.model  mbti_rf__TF.model
