[package]
name = "mbti-random-forest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
serde = {version = "1.0.144", features = ["derive"]}
smartcore = { version = "0.2.1", features = ["serde"] }
vtext = "0.2.0"
bincode = "1.3.3"
indexmap = "1.7.0"