[package]
name = "mbti-random-forest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
serde = {version = "1.0.144", features = ["derive"]}
smartcore = { version = "0.2.1", features = ["serde", "ndarray-bindings", "nalgebra-bindings"] }
vtext = "0.2.0"
bincode = "1.3.3"
rand = "0.8.4"
regex = "1"
rust-stemmers = "1.2.0"
stopwords = "0.1.0"
ndarray = "0.15.6"
nalgebra = "0.31.1"
libmath = "0.2.1"
serde_json = "1.0.85"
rust-bert = "0.19.0"
rust_decimal = "1.26.1"